# gentle_rs

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Credits.rtf  Dockerfile  INSTALL.md  Info.plist  README.md  build.rs  copyright  lib.rs  nanopore_native_barcodes_nbd114_24_v14.fasta  release_notes_v0.1.0-internal.2.md  release_notes_v0.1.0-internal.3.md  release_notes_v0.1.0-internal.4.md  release_notes_v0.1.0-internal.5.md  release_notes_v0.1.0-internal.6.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: tutorial-artifact-figure.md  tutorial-biology-concern.md  tutorial-confusion.md  tutorial-execution-failure.md
.github/workflows/: ci.yml  container.yml  release.yml
artifacts/: simple_pcr_demo_primers.report.json
assets/: README.md  agent_systems.json  amino_acids.json  blast_defaults.json  cloning_patterns.json  cloning_routines.json  codon_catalog.csv  codon_tables.json  dna_ladders.json  enzymes.json  external_service_providers.json  gene_groups.json  genomes.json  helper_genomes.json  helper_semantics_vocabulary.json  host_profiles.json  icon.icns  icon.xcf  jaspar.motifs.json  jaspar_2022.json  publication_resources.json  reporter_catalog.json  rna_ladders.json  translations.csv
assets/backgrounds/: README.md
assets/cloning_patterns_catalog/: README.md
assets/cutrun.d/: rostock_p73_sra.json
assets/i18n/: de-DE.json  en-GB.json  en-US.json  fr-FR.json  it-IT.json  ja-JP.json  la.json  zh-Hans.json
assets/mascots/: README.md
assets/panels/: tp53_isoforms_v1.json  tp73_delta_ex2_3_isoforms_v1.json  tp73_dn_isoforms_v1.json  tp73_isoforms_v1.json  tp73_long_range_cdna_virtual_panel_v1.fasta  tp73_long_range_cdna_virtual_panel_v1.json
crates/gentle-engine/: Cargo.toml
crates/gentle-gui/: Cargo.toml
crates/gentle-gui/src/: icons.rs  lib.rs  theme.rs  window_backdrop.rs
crates/gentle-protocol/: Cargo.toml
crates/gentle-render/: Cargo.toml
crates/gentle-render/src/: feature_expert.rs  lib.rs  pool_gel.rs  protein_gel.rs  protocol_cartoon.rs
crates/gentle-render/tests/snapshots/: README.md
crates/gentle-shell/: Cargo.toml
crates/gentle-shell/src/: command.rs  lib.rs  parser.rs  shell_docs.rs  ui_intent.rs
data/: README.md
data/resources/: jaspar.remote_metadata.json  nanopore_direct_cdna_kit14_adapters.fasta  tp73_delta_ex2_3_refseq_derived_transcripts.fasta  tp73_dex2_3_p73beta_iegt_plasmid_cdna.fasta  tp73_dn_ena_transcripts.fasta  tp73_tap73alpha_iegt_rostock_cdna.fasta
data/tutorial_inputs/: README.md  gentle_mammalian_luciferase_backbone_v1.gb
docker/: bigWigToBedGraph  entrypoint.sh
docs/: CHANGELOG.md  agent_dev_loop.md  agent_interface.md  agent_interfaces_tutorial.md  ai_cloning_primer.md  ai_glossary_extensions.json  ai_prompt_contract.md  ai_task_playbooks.md  architecture.md  capability_not_applicable_overrides.json  clariom_e_mtab_14704_tp73_probe_region_validation_runbook.md  clawbio_gentle_integration_onepager.md  cli.md  cloning_pattern_catalog.md  cloning_routine_catalog_plan.md  cloning_tool_gap_matrix.md  computational_provenance_plan.md  construct_reasoning_inspection_cli_parity_plan.md  construct_reasoning_plan.md  container.md  cutrun_release_smoke.md  decisions.md  gene_set_retrieval_producers_plan.md  glossary.json  gui.md  gui_cli_mcp_parity.md  gui_gene_set_collection_operations_plan.md  inline_operand_audit.md  introspection.md  legacy_gentle_m_intake.md  maintenance_chore_plan.md  pancreas_gene_plotting.md  parity_matrix_overrides.json  primer_design_specialist_plan.md  protocol.md  quickstart_claude.md  release.md  release_notes_v0.1.0-internal.2.md  reviewer_preview.md  rna_guides_spec.md  (+9 more)
docs/examples/: README.md  ai_cloning_examples.md
docs/figures/: README.md  cell_culture_plate.scad  gibson_single_insert_pipetting_rack.scad  gibson_single_insert_readme.plan.json  gibson_single_insert_storage_rack.scad  p53_family_query_anchor_dotplot.workflow.json  p53_family_tp53_canonical.fasta  p53_family_tp63_canonical.fasta  (+22 more)
integrations/python/: README.md  pyproject.toml
integrations/python/gentle_py/: __init__.py  client.py
integrations/python/tests/: test_client.py
scripts/: analyze_p73_clariomd_probe_level.R  benchmark_jaspar_interest_catalog.sh  codex-agent-bridge  dev-gentle-cli  extract_clariomd_gene_panel_fixture.py  fetch_ensembl_cdna_fixtures.sh  generate_clawbio_trigger_keywords.py  list_ensembl_paralogs.py  maintenance_chore.py  pancreas_gene_rna_screen.sh  pfm2json.pl  plot_p53_family_pancreas.py  plot_pancreas_gene_family.py  plot_pancreas_gene_screen.py  plot_tp73_pancreas_cohort.py  probe_regions_affy.R  probe_regions_oligo.R  rebuild_rna_gene_screen_summary_from_state.py  regenerate_parity_matrix.sh  tp73_pancreas_cohort.sh  tp73_pancreas_rna_mapping.sh
src/: about.rs  agent_bridge.rs  agent_execution.rs  agent_planner.rs  agent_transport.rs  amino_acids.rs  app.rs  attract_motifs.rs  cli_support.rs  constraints.rs  dna_display.rs  dna_ladder.rs  dna_marker.rs  dna_sequence.rs  dna_viewer_repro.rs  egui_compat.rs  engine.rs  engine_shell.rs  ensembl_gene.rs  ensembl_protein.rs  enzymes.rs  error.rs  exon_frame.rs  external_service_providers.rs  facility.rs  feature_expert.rs  feature_location.rs  gc_contents.rs  gene_groups.rs  genomes.rs  gibson_planning.rs  gui_profiler.rs  icons.rs  iupac_code.rs  js_interface.rs  left_panel.rs  lib.rs  lineage_export.rs  linear_base_routing.rs  lua_interface.rs  (+49 more)
test_files/: MA1234.1.jaspar  README.md  bioseq.rs  cloning_digest_ligation_extract.gsh  ensembl_human_tp53_all.fasta  ensembl_human_tp63_all.fasta  ensembl_human_tp73_all.fasta  pGEX-3X.embl  pGEX-3X.gb  pGEX_3X.fa  synthetic.project.gentle.json  tp53.project.gentle.json  tp73.ncbi.asn1  tp73.ncbi.gb  tp73.project.gentle.json
tests/: adapter_error_contract.rs  capability_registry_parity.rs  mcp_capability_surface.rs  parity_matrix_freshness.rs  reporter_construct_handoff_cli.rs  test_codex_agent_bridge.py  test_plot_pancreas_gene_screen.py
(+563 files in other folders)
