[package]
name = "gentle"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
description = "GENtle"
keywords = ["plasmid", "vector", "primer", "biology", "pcr"]
categories = ["science", "science::bioinformatics"]
repository = "https://github.com/magnusmanske/gentle_rs/"
readme = "README.md"
version = "0.1.0"
edition = "2021"
default-run = "gentle"

[[bin]]
name = "gentle"
path = "src/bin/gentle.rs"

[lib]
name = "gentle"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
bio = "^1"
lazy_static = "^1"
csv = "^1"
itertools = "*"
# gb-io = "*" # Until nom-7 is merged and published
gb-io = { git = "https://github.com/dlesl/gb-io", branch = "nom-7" }
svg = "*"
rayon = "*"
anyhow = "*"
eframe = { version = "*", features = [
	"accesskit",
	"default_fonts",
	"glow",
	"wayland",
	# "web_screen_reader",
	"x11",
	"persistence",
] }
egui_extras = { version = "*", features = ["all_loaders"] }
egui-file-dialog = "*" #  For file dialogs.
copypasta = "*" # For clipboard things not in egui
image = { version = "*", features = ["jpeg", "png"] }
rfd = "*"

#[build-dependencies]
#winresource = "*" # For Windows app icon

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
strip = true
