[package]
name = "gentle"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
description = "GENtle"
keywords = ["plasmid", "vector", "primer", "biology", "pcr"]
categories = ["science", "science::bioinformatics"]
repository = "https://github.com/magnusmanske/gentle_rs/"
readme = "README.md"
version = "0.1.0"
edition = "2021"
default-run = "gentle"
build = "build.rs"

[package.metadata.bundle]
identifier = "com.example.gentle"
icon = ["assets/icon.icns"]  # Path to your .icns file
resources = ["assets/", "docs/", "Credits.rtf"]      # Additional resources if needed


[[bin]]
name = "gentle"
path = "src/bin/gentle.rs"

[[bin]]
name = "gentle_lua"
path = "src/bin/gentle_lua.rs"

[[bin]]
name = "gentle_js"
path = "src/bin/gentle_js.rs"

[[bin]]
name = "gentle_cli"
path = "src/bin/gentle_cli.rs"

[lib]
name = "gentle"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_with = "*"
bio = "^1"
lazy_static = "^1"
csv = "^1"
itertools = "*"
# gb-io = "*" # Until nom-7 is merged and published
gb-io = { git = "https://github.com/dlesl/gb-io", branch = "nom-7", features = [
	"serde",
] }
svg = "*"
rayon = "*"
anyhow = "*"
eframe = { version = "*", features = [
	"accesskit",
	"default_fonts",
	"glow",
	"wayland",
	# "web_screen_reader",
	"x11",
	"persistence",
] }
egui_extras = { version = "*", features = ["all_loaders"] }
egui_commonmark = { version = "0.18.0", default-features = false, features = ["pulldown_cmark", "load-images"] }
egui-file-dialog = "*" #  For file dialogs.
copypasta = "*" # For clipboard things not in egui
image = { version = "*", features = ["jpeg", "png"] }
rfd = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
tempfile = "*"
winres = "0.1"
flate2 = "1.0"
regex = "^1"
pulldown-cmark = "0.12.2"
sha1 = "0.10"

# For cli
rustyline = "*"
mlua = { version = "*", features = ["lua54", "vendored", "serialize"] }
deno_core = "*"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = "0.2.2"
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSResponder"] }

#[build-dependencies]
#winresource = "*" # For Windows app icon

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1
strip = true
