[package]
name = "gentle-gui"
version = "0.1.0-internal.3"
edition = "2024"
publish = false
description = "GENtle egui/eframe application layer"

[lib]
name = "gentle_gui"
path = "src/lib.rs"

[dependencies]
egui = "0.34.1"
serde = { version = "^1", features = ["derive"] }

[dev-dependencies]
serde_json = "^1"
tempfile = "*"
