[package]
name = "gentle-gui"
version.workspace = true
edition.workspace = true
publish = false
description = "GENtle egui/eframe application layer"

[lib]
name = "gentle_gui"
path = "src/lib.rs"

[dependencies]
egui = "0.34.1"
serde = { version = "^1", features = ["derive"] }

[dev-dependencies]
serde_json = "^1"
tempfile = "*"
