[package]
name = "gentle-gui"
version.workspace = true
edition.workspace = true
publish = false
description = "GENtle egui/eframe application layer"

[lib]
name = "gentle_gui"
path = "src/lib.rs"

[dependencies]
egui = "0.34.2"
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
