[package]
name = "gentle-render"
version = "0.1.0-internal.3"
edition = "2024"
publish = false
description = "Headless GENtle export and rendering helpers"

[lib]
name = "gentle_render"
path = "src/lib.rs"

[features]
snapshot-tests = []

[dependencies]
gentle-protocol = { path = "../gentle-protocol" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
svg = "*"
