[package]
name = "gentle-render"
version.workspace = true
edition.workspace = true
publish = false
description = "Headless GENtle export and rendering helpers"

[lib]
name = "gentle_render"
path = "src/lib.rs"

[features]
snapshot-tests = []

[dependencies]
gentle-protocol = { path = "../gentle-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
svg = { workspace = true }
