[package]
name = "gentle-shell"
version.workspace = true
edition.workspace = true
publish = false
description = "Shared GENtle shell grammar and executor"

[lib]
name = "gentle_shell"
path = "src/lib.rs"

[dependencies]
gentle-protocol = { path = "../gentle-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
